[gd_scene load_steps=5 format=3 uid="uid://bu3ffefkxptaj"]

[ext_resource type="Script" path="res://Scenes (CardUI)/shop/ShopBuyButton.gd" id="1_6od3r"]
[ext_resource type="Script" path="res://custom_resources/run_stats.gd" id="2_rm6ch"]
[ext_resource type="Texture2D" uid="uid://djq1xs50kuqwn" path="res://Assets/current arts/coupons.png" id="2_s8sgg"]

[sub_resource type="Resource" id="Resource_4lhxb"]
script = ExtResource("2_rm6ch")
gold = 0
card_rewards = 3
common_weight = 6.0
uncommon_weight = 3.7
rare_weight = 0.3
treasure_common_weight = 0.3
treasure_uncommon_weight = 3.7
treasure_rare_weight = 6.0
shop_common_weight = 0.3
shop_uncommon_weight = 3.7
shop_rare_weight = 6.0

[node name="ShopBuyButton" type="Button"]
custom_minimum_size = Vector2(45, 45)
offset_right = 45.0
offset_bottom = 45.0
script = ExtResource("1_6od3r")
run_stats = SubResource("Resource_4lhxb")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.0
offset_top = -20.0
offset_right = 23.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="CustomText" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
text = "Card Pack"
horizontal_alignment = 1

[node name="CustomIcon" type="TextureRect" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("2_s8sgg")
stretch_mode = 5

[connection signal="pressed" from="." to="." method="_on_pressed"]
